--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <section class="container">
             <div class="row d-flex align-items-center">
-                <div class="col-lg-5 col-11 ">
+                <div class="col-lg-5 col-11 estimate ">
                     <img class="img-fluid" src="images/estimate.jpg" alt="">
                     <!-- error messages -->
                     <h4 id="error-message1" class="error-message text-center pt-4">Please give any number</h4>
