--- a/index.html
+++ b/index.html
@@ -33,12 +33,15 @@
                 <div class="col-lg-5 col-11 text-center estimate py-2 rounded mx-auto">
                     <!-- income field -->
                     <h4>Income</h4>
-                    <p>Income : <input id="income-input" class="bg-light border border-warning rounded" type="text"></p>
+                    <p>&nbspIncome : <input id="income-input" class="bg-light border border-warning rounded"
+                            type="text"></p>
                     <!-- Expenses fields -->
                     <h4>Expenses</h4>
-                    <p>Food : <input id="food-input" class="bg-light border border-warning rounded" type="text">
+                    <p>&nbsp&nbsp&nbsp&nbspFood : <input id="food-input" class="bg-light border border-warning rounded"
+                            type="text">
                     </p>
-                    <p>Rent : <input id="rent-input" class="bg-light border border-warning rounded" type="text"></p>
+                    <p>&nbsp&nbsp&nbsp&nbspRent : <input id="rent-input" class="bg-light border border-warning rounded"
+                            type="text"></p>
                     <p>Clothes : <input id="cloth-input" class="bg-light border border-warning rounded" type="text"></p>
                     <!-- calculate button -->
                     <button id="calculate" class="btn button m-3 px-5">Calculate</button>
